Cap2025/src/edu/najah/cap/advance/examples/exc3/bad/ITrimFilter.java
package edu.najah.cap.advance.examples.exc3.bad;

public interface ITrimFilter {

    String applyTrimFilter(String result) ;
}
